--- a/速递医疗 医生端/StoryBoard/MyPatient.storyboard
+++ b/速递医疗 医生端/StoryBoard/MyPatient.storyboard
@@ -155,6 +155,7 @@
                                             <outlet property="pix_imv" destination="U2W-x3-eCr" id="GyL-XR-2r4"/>
                                             <outlet property="sexLabel" destination="ftO-Y4-l1o" id="JII-ph-6BR"/>
                                             <outlet property="timeLabel" destination="Mua-G2-c8e" id="DcJ-ym-6Kx"/>
+                                            <segue destination="G9O-Dl-o1V" kind="presentation" id="LhT-lE-wW2"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -175,7 +176,6 @@
                     <navigationItem key="navigationItem" id="HSC-JR-qC4"/>
                     <connections>
                         <outlet property="tableView" destination="s4O-2M-JmZ" id="iqj-4P-msY"/>
-                        <segue destination="G9O-Dl-o1V" kind="presentation" identifier="showDetail" id="nts-gn-Plw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UVL-ot-MZm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -332,7 +332,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TGw-0S-7LR" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="vhb-kg-o6V" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="911" y="566"/>
+            <point key="canvasLocation" x="927" y="582"/>
         </scene>
         <!--Mypatient page checked-->
         <scene sceneID="Yqy-5e-872">
@@ -453,6 +453,7 @@
                                             <outlet property="pix_imv" destination="k0z-rB-13R" id="V4M-Cz-sNu"/>
                                             <outlet property="sexLabel" destination="TAW-W7-CZY" id="Ygk-CG-Kzu"/>
                                             <outlet property="timeLabel" destination="Hj0-Ys-RNY" id="Yqb-VG-GNE"/>
+                                            <segue destination="G9O-Dl-o1V" kind="presentation" id="VrS-0k-oDp"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -483,4 +484,7 @@
     <resources>
         <image name="back" width="10" height="15"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="VrS-0k-oDp"/>
+    </inferredMetricsTieBreakers>
 </document>
