--- a/速递医疗 医生端/StoryBoard/MyPatient.storyboard
+++ b/速递医疗 医生端/StoryBoard/MyPatient.storyboard
@@ -552,7 +552,7 @@
                                     <constraint firstAttribute="trailing" secondItem="Wqz-p9-USJ" secondAttribute="trailing" id="xLy-Bu-iDg"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GM9-pH-Svx" customClass="BaseTableView" customModule="速递医疗_病人端" customModuleProvider="target">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GM9-pH-Svx" customClass="BaseTableView" customModule="速递医疗_医生端" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="100" width="375" height="586.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
